--- a/wp-content/themes/askonasholt2016/assets/scss/global/_settings.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_settings.scss
@@ -43,8 +43,15 @@
 @import '../../components/foundation-sites/scss/util/util';
 
 // JB's VARS
-$brand-red: #BA0C2F;
-$header-height: 100px;
+$header-height:   100px;
+
+$red:         #BA0C2F;
+$brown:       #B49A81;
+$lightbrown:  #F2F1ED;
+$darkgrey:    #262626;
+$grey:        #3E3E3E;
+
+$sitepadding: 15px; 
 
 
 // 1. Global
