--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -98,6 +98,7 @@
 @import "components/links";
 @import "components/home-hero";
 @import "components/artist-details";
+@import "components/general-heroes";
 
 // Templates
 @import "templates/front";
