Text banner and footer

--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -101,6 +101,7 @@
 @import "components/home-hero";
 @import "components/artist-details";
 @import "components/general-heroes";
+@import "components/text-banner";
 
 // Templates
 @import "templates/front";
