--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
@@ -3,12 +3,14 @@
 body.post-type-archive-tours-projects {
   .tour-hero {
       height: 70vh;
+      max-height: 400px; // temp
       @include full-bg;
       color: white;
       position: relative;
   }
   .tour-project-archive-hero {
       height: 50vh;
+      max-height: 400px; // temp
       text-align: center;
   }
 }
