--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
@@ -10,11 +10,16 @@
 	list-style: none;
 	margin: 0;
 	li {
-		// SASS MAGIC RIGHT HERE!
-		@extend .button;
 		color: $white;
+		float: left;
+		margin-right: ($sitepadding / 2);
+		margin-bottom: ($sitepadding / 2);
 		a {
-			color: $white;			
+			color: $white;
+			@extend .button;
+			margin-bottom: 0;
+			// SASS MAGIC RIGHT HERE!
+			// display: block;		
 		}
 	}
 }
