--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -92,6 +92,7 @@
 @import "modules/navigation";
 @import "modules/footer";
 @import "modules/sidebar";
+@import "modules/searchbar";
 @import "modules/editor-style";
 @import "modules/nav-bar";
 @import "modules/artist-filtering";
