--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -96,6 +96,7 @@
 @import "modules/editor-style";
 @import "modules/nav-bar";
 @import "modules/artist-filtering";
+@import "modules/link-banner";
 
 // Components
 @import "components/buttons";
