Tours updates, single page nav

--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -97,6 +97,7 @@
 @import "modules/nav-bar";
 @import "modules/artist-filtering";
 @import "modules/link-banner";
+@import "modules/single-page-nav";
 
 // Components
 @import "components/buttons";
