--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -109,6 +109,8 @@
 @import "components/general-heroes";
 @import "components/text-banner";
 @import "components/magnific-popup";
+@import "components/thumbnail-links";
+@import "components/contact-map";
 
 // Templates
 @import "templates/front";
