--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
@@ -66,6 +66,14 @@ body.post-type-archive-tours-projects {
   }
 }
 
+.tour-hero {
+    position: relative;
+    height: 70vh !important;
+    max-height: 500px;
+}
+
+
+
 
 .mfp-with-zoom .mfp-container,
 .mfp-with-zoom.mfp-bg {
