--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -6663,6 +6663,9 @@ table.hover tbody tr:nth-of-type(even):hover {
 .section-header {
   padding: 25px 0; }
 
+span.bold {
+  font-weight: bold; }
+
 body {
   outline: 1px solid #2980B9 !important; }
 
@@ -10476,6 +10479,44 @@ img.mfp-img {
     padding-left: 6px;
     padding-right: 6px; } }
 
+.row.thumbnail-links .thumbnail-link-image {
+  background-position: center center;
+  background-repeat: no-repeat;
+  border-bottom: 0;
+  -webkit-background-size: cover;
+  background-size: cover;
+  height: 200px;
+  padding: 0;
+  position: relative;
+  margin: 0.9rem; }
+
+.row.thumbnail-links a.thumbnail-link {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: rgba(0, 0, 0, 0.5);
+  -webkit-transition: 0.5s;
+  transition: 0.5s; }
+  .row.thumbnail-links a.thumbnail-link .thumbnail-link-text {
+    color: #ffffff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    font-weight: bold; }
+
+.row.thumbnail-links a.thumbnail-link:hover {
+  background: rgba(0, 0, 0, 0.3); }
+
+#map {
+  height: 400px;
+  background-color: gray; }
+
+.contact-details-section {
+  padding: 25px 0; }
+
 #front-hero {
   background: url("../images/demo/hero-bg-foundation-6-small.svg") bottom center;
   -webkit-background-size: cover;
@@ -10991,6 +11032,11 @@ body.post-type-archive-tours-projects .tour-thumbnail {
   height: 55px;
   width: 55px;
   border-radius: 55px; }
+
+.tour-hero {
+  position: relative;
+  height: 70vh !important;
+  max-height: 500px; }
 
 .mfp-with-zoom .mfp-container,
 .mfp-with-zoom.mfp-bg {
