Magazine page and getting to pull though to home page

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
@@ -34,3 +34,17 @@ body.post-type-archive-magazine {
 		bottom: 0;
 	}
 }
+
+//************************
+//Single Magazine pages **
+//************************
+
+.single-magazine-category {
+	display: flex;
+	li {
+		list-style-type: none;
+		text-transform: uppercase;
+		display: flex;
+		margin-right: 10px;
+	}
+}
