--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_nav-bar.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_nav-bar.scss
@@ -58,7 +58,8 @@ header#masthead {
 }
 
 nav#site-navigation {
-    max-width: 75rem;
+    // max-width: 75rem;
+    @include grid-row();
     margin: 0 auto;
 }
 
