--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -112,6 +112,7 @@
 @import "components/magnific-popup";
 @import "components/thumbnail-links";
 @import "components/contact-map";
+@import "components/plyr"; /// HTML5 AUDIO PLAYER
 
 // Templates
 @import "templates/front";
