--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -99,6 +99,8 @@
 @import "modules/link-banner";
 @import "modules/single-page-nav";
 @import "modules/magazine-item";
+@import "modules/timeline-reset";
+@import "modules/timeline";
 
 // Components
 @import "components/buttons";
@@ -112,6 +114,7 @@
 @import "components/magnific-popup";
 @import "components/thumbnail-links";
 @import "components/contact-map";
+@import "components/center-text-heroes";
 
 // Templates
 @import "templates/front";
