nailed the artist quick look. cheers

--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -114,6 +114,7 @@
 @import "components/contact-map";
 @import "components/plyr"; /// HTML5 AUDIO PLAYER
 @import "components/audio-player-skin"; /// HTML5 AUDIO PLAYER
+@import "components/artist-quicklook-content";
 
 // Templates
 @import "templates/front";
