--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -101,6 +101,7 @@
 @import "modules/magazine-item";
 @import "modules/timeline-reset";
 @import "modules/timeline";
+@import "modules/filter-header";
 
 // Components
 @import "components/buttons";
