--- a/wp-content/themes/askonasholt2016/assets/scss/components/_audio-player-skin.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_audio-player-skin.scss
@@ -5,6 +5,7 @@
 	background: $bggrey;
 	color: $white;
 	padding: 0.8rem 1rem 0.5rem;
+	margin-bottom: $sitepadding;
 	h3, h4 {
 		text-transform: uppercase;
 		font-size: 1rem;
