--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
@@ -1,6 +1,9 @@
 .artist-filtering-block {
 	background-color: $lightbrown;
 	position: relative;
+	@include full-bg;
+	background-repeat: repeat-x;
+	background-size: inherit;
 }
 
 // .artist-categories {
