map and flightpaths

--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -102,6 +102,8 @@
 @import "modules/timeline-reset";
 @import "modules/timeline";
 @import "modules/filter-header";
+@import "modules/route-map";
+@import "modules/schedule";
 
 // Components
 @import "components/buttons";
