--- a/wp-content/themes/askonasholt2016/assets/scss/global/_temp.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_temp.scss
@@ -12,3 +12,11 @@
 .temp-testing-mp3 {
 	margin-bottom: 100vh;
 }
+
+
+// .schedule { // remove this
+	
+// 	min-height: 80vh;
+// 	background-color: $bgdarkgrey;
+
+// }
