--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -10083,6 +10083,19 @@ header h1 {
   -ms-transform: translateX(-50%);
   transform: translateX(-50%); }
 
+.acf-map {
+  width: 100%;
+  height: 400px;
+  border: #ccc solid 1px;
+  margin: 20px 0; }
+
+/* fixes potential theme css conflict */
+.acf-map img {
+  max-width: inherit !important; }
+
+.route-map {
+  min-height: 60vh; }
+
 .sites-button {
   background: #FF6908;
   font-size: 1.25rem;
