--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_navigation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_navigation.scss
@@ -127,7 +127,7 @@
 //JBURT NAV STYLES 
 .top-bar {
     // min-height: $header-height;
-    height: 105px;
+    height: $header-height;
     // border-bottom: 1px solid gray;
 }
 
