Home Page Styling

--- a/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
@@ -2,11 +2,20 @@
 
 .section-header  {
 	padding: $sitepadding 0;
+    a {
+        font-size: 17px;
+        color: inherit;
+    }
+    svg.red-arrow {
+        position: relative;
+        top: 3px;
+    }
 }
 
 span.bold {
 	font-weight: bold;
 }
+
 
 /* Complete Fonts */
 
