--- a/wp-content/themes/askonasholt2016/assets/scss/components/_text-banner.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_text-banner.scss
@@ -14,16 +14,21 @@
 
 //medium styles
 @include breakpoint(medium only) {
-	.text-banner {
-		margin: 0 4rem;
-		padding: $sitepadding;
+	.text-banner-wrapper {
+		.text-banner {
+			margin: 0 4rem;
+			padding: $sitepadding;
+		}
 	}
 }
 
 //large-up styles
 @include breakpoint(large up) {
-	.text-banner {
-		margin: 0 7rem;
-		padding: $sitepadding;
+	.text-banner-wrapper {
+		.text-banner {
+			margin: 0 auto;
+			padding: $sitepadding-large;
+			max-width: 75%;
+		}
 	}
 }
